<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.makanmalam.amir.MainActivity">

    <EditText
        android:id="@+id/namaMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jumlahPorsi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/editText_namaMakanan" />

    <EditText
        android:id="@+id/jumlahPorsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/namaMakanan"
        android:layout_alignLeft="@+id/namaMakanan"
        android:layout_alignRight="@+id/namaMakanan"
        android:layout_alignStart="@+id/namaMakanan"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/editText_jumlahPorsi" />

    <Button
        android:id="@+id/buttonEatbus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/jumlahPorsi"
        android:layout_marginTop="15dp"
        android:text="@string/button_eatbus"
        android:onClick="launchSecondActivity"/>

    <Button
        android:id="@+id/buttonAbnormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonEatbus"
        android:text="@string/button_abnormal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/header1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/header2"
        android:textSize="24sp" />
</RelativeLayout>
